GPv3: Conversion of layers parented to bones is not working correctly #120459

Closed
opened 2024-04-10 11:04:46 +02:00 by Falk David · 0 comments
Member

System Information
Operating system: Linux-6.5.0-10027-tuxedo-x86_64-with-glibc2.35 64 Bits, X11 UI
Graphics card: NVIDIA GeForce RTX 3060/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 525.147.05

Blender Version
Broken: version: 4.2.0 Alpha
Worked: ?

Short description of error
Converting a grease pencil object with layers that are parented to bones does not work correctly.

Blender 4.1 (GPv2):
image

Blender 4.2 (GPv3):
image

Exact steps for others to reproduce the error

  1. Open the attached .blend file with the Grease Pencil 3.0 Automatic Conversion option enabled.
  2. The layers are not transformed correctly.
**System Information** Operating system: Linux-6.5.0-10027-tuxedo-x86_64-with-glibc2.35 64 Bits, X11 UI Graphics card: NVIDIA GeForce RTX 3060/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 525.147.05 **Blender Version** Broken: version: 4.2.0 Alpha Worked: ? **Short description of error** Converting a grease pencil object with layers that are parented to bones does not work correctly. Blender 4.1 (GPv2): ![image](/attachments/754ea4e9-03ef-44be-8c0b-3f284b316a0d) Blender 4.2 (GPv3): ![image](/attachments/a7601d0f-50d5-4aab-9601-a297e461d91b) **Exact steps for others to reproduce the error** 1. Open the attached `.blend` file with the `Grease Pencil 3.0 Automatic Conversion` option enabled. 2. The layers are not transformed correctly.
Falk David added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2024-04-10 11:04:47 +02:00
Falk David added this to the Grease Pencil project 2024-04-10 11:04:50 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Needs Triage
labels 2024-04-10 12:41:42 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
1 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#120459
No description provided.